fix ftr button visibility, dyn. showToolTip

--- a/src/App/containers/_FooterControls/_footer-controls.scss
+++ b/src/App/containers/_FooterControls/_footer-controls.scss
@@ -7,9 +7,15 @@
   padding: 0 $layout-01;
   display: flex;
   justify-content: space-between;
+  z-index: 5;
   //background-color: $interactive-04;
 
-  .controlMenus {
-    opacity: 0;
-  }
+}
+
+.footerControls .dashTopButtons {
+  display: flex;
+}
+
+.footerControls .controlMenus {
+  opacity: 0;
 }
